# Shiny

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: ClangTidy.cmake  CppSanitizers.cmake
ShinyInterpreter/: ShinyInterpreter.sln
ShinyInterpreter/ShinyInterpreter/: InteractiveSession.cpp  InteractiveSession.h  ReadMe.txt  ShinyInterpreter.cpp  ShinyInterpreter.vcxproj  stdafx.cpp
ShinyInterpreter/ShinyRuntime/: Evaluator.cpp  FixnumObject.cpp  FixnumObject.h  Object.cpp  Object.h  ReadMe.txt  Reader.cpp  Reader.h  ShinyRuntime.vcxproj  stdafx.cpp
ShinyInterpreter/ShinyUnitTests/: stdafx.cpp
ci/: init_cmake.sh  notes.txt  run_tests.sh
src/corelib/: corelib.scm
src/interpreter/: CMakeLists.txt  InteractiveSession.cpp  InteractiveSession.h  ShinyConfig.cmake.in  ShinyInterpreter.cpp
src/runtime/: Allocator.cpp  CMakeLists.txt  CharacterStream.cpp  Environment.cpp  EnvironmentFrame.cpp  Evaluator.cpp  Exception.cpp  FixnumObject.cpp  FreeListAllocator.cpp  Object.cpp  Procedures.cpp  RawString.cpp  Reader.cpp  RuntimeApi.cpp  ShinyRuntimeConfig.cmake.in  Value.cpp  VmState.cpp
src/runtime/allocators/: FreeListAllocator.cpp  MallocAllocator.cpp
src/runtime/include/runtime/: Allocator.h  Builtins.h  CharacterStream.h  Environment.h  EnvironmentFrame.h  Evaluator.h  Exception.h  Object.h  Procedures.h  RawString.h  Reader.h  RuntimeApi.h  SExpression.h  Value.h  VmState.h
src/runtime/include/runtime/allocators/: FreeListAllocator.h  MallocAllocator.h
src/runtime/procedures/: BooleanProcedures.cpp  ListProcedures.cpp  MathProcedures.cpp  PairProcedures.cpp  SymbolProcedures.cpp
src/runtime_tests/: ShinyUnitTests.vcxproj  unittest1.cpp
tests/runtime_tests/: CMakeLists.txt  CharacterStreamTests.cpp  EnvironmentFrameTests.cpp  EnvironmentTests.cpp  EvaluatorBooleanTests.cpp  EvaluatorListTests.cpp  EvaluatorMathTests.cpp  EvaluatorPairTests.cpp  EvaluatorProcedureTests.cpp  EvaluatorSymbolTests.cpp  EvaluatorTests.cpp  ExceptionTests.cpp  FreeListAllocatorTests.cpp  MallocAllocatorTests.cpp  RawStringTests.cpp  ReaderTests.cpp  RuntimeApiTests.cpp  SExpressionTests.cpp  TestMain.cpp  UnitTest1.cpp  ValueApiTests.cpp  ValueTests.cpp  VmStateTests.cpp
tests/runtime_tests/support/: EvaluatorFixture.cpp  EvaluatorFixture.h  TestHelpers.cpp  TestHelpers.h
